--- a/Result.html
+++ b/Result.html
@@ -254,9 +254,11 @@ const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
   <a href="${profilePath}" class="no-underline">${typeName}</a>
 </div>
   <div class="slogan">${slogan}</div>
-<a href="${profilePath}">
-  <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false">
-</a>
+<div style="text-align: center;">
+  <a href="${profilePath}">
+    <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false">
+  </a>
+</div>
  <div class="profile-caption">
   <a href="/premium/erotic-blueprint_${linkSafeName}.html" class="no-underline" style="color: gold; font-weight: bold; text-decoration: underline;">
     Click here to reveal your full sexual profile
