--- a/Result.html
+++ b/Result.html
@@ -90,10 +90,7 @@
     img.no-save {
   user-select: none;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
+ margin: 0 auto 30px auto;
   max-width: 400px;
   width: 100%;
   height: auto;
@@ -257,7 +254,6 @@ const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
   <a href="${profilePath}">
     <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false">
   </a>
-</div>
  <div class="profile-caption">
   <a href="/premium/erotic-blueprint_${linkSafeName}.html" class="no-underline" style="color: gold; font-weight: bold; text-decoration: underline;">
     Click here to reveal your full sexual profile
