--- a/Result.html
+++ b/Result.html
@@ -50,30 +50,6 @@
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
     }
 
-    button {
-      margin-top: 20px;
-      padding: 10px 18px;
-      font-weight: bold;
-      font-size: 1rem;
-      border: 2px solid white;
-      background-color: transparent;
-      color: white;
-      font-style: italic;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-
-    #typeDetails {
-      margin-top: 20px;
-      font-style: italic;
-      font-size: 1rem;
-      display: none;
-    }
-
     .profile-caption {
       font-style: italic;
       font-size: 1rem;
@@ -82,89 +58,73 @@
       opacity: 0.85;
     }
 
+    .archetype-name {
+      font-weight: bold;
+      font-size: 2rem;
+      margin-bottom: 12px;
+    }
+
+    .slogan {
+      font-style: italic;
+      font-size: 1.2rem;
+      margin-bottom: 14px;
+    }
+
+    .image-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+
+    img.no-save {
+      user-select: none;
+      max-width: 400px;
+      width: 100%;
+      height: auto;
+      border: 4px solid gold;
+      border-radius: 16px;
+      box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+    }
+
     a.no-underline {
       color: white;
       text-decoration: none;
     }
 
-    img.no-save {
-  user-select: none;
-  display: block;
- margin: 0 auto 30px auto;
-  max-width: 400px;
-  width: 100%;
-  height: auto;
-  border: 4px solid gold;
-  border-radius: 16px;
-  box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
-}
-
-    .archetype-name {
-  font-weight: bold;
-  font-size: 2rem;
-  margin-bottom: 12px;
-}
-
-@media (min-width: 1024px) {
-  .archetype-name {
-    font-size: 3.2rem;
-    margin-bottom: 20px;
-  }
-}
-    
-    .slogan {
-  font-style: italic;
-  font-size: 1.2rem;
-  margin-bottom: 14px;
-}
-
-@media (min-width: 1024px) {
-  .slogan {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-}
     @media (min-width: 1024px) {
-  body {
-    padding: 80px 40px;
-    font-size: 22px;
-  }
+      .archetype-name {
+        font-size: 3.2rem;
+        margin-bottom: 20px;
+      }
 
-  .title {
-    font-size: 6rem;
-    margin-bottom: 40px;
-  }
+      .slogan {
+        font-size: 2rem;
+        margin-bottom: 20px;
+      }
 
-  .subtitle {
-    font-size: 2.4rem;
-    margin-bottom: 40px;
-  }
+      .title {
+        font-size: 6rem;
+        margin-bottom: 40px;
+      }
 
-  .section {
-    font-size: 1.8rem;
-    line-height: 1.8;
-    max-width: 1000px;
-    margin: 40px auto;
-  }
+      .subtitle {
+        font-size: 2.4rem;
+        margin-bottom: 40px;
+      }
 
-  #typeDetails {
-    font-size: 1.6rem;
-    line-height: 1.6;
-  }
+      .section {
+        font-size: 1.8rem;
+        line-height: 1.8;
+        max-width: 1000px;
+        margin: 40px auto;
+      }
 
-  .profile-caption {
-    font-size: 1.6rem;
-    margin-top: 16px;
-  }
-
-  .premium-cta {
-    font-size: 1.8rem;
-    margin-top: 60px;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
+      .profile-caption {
+        font-size: 1.6rem;
+        margin-top: 16px;
+      }
+    }
   </style>
 </head>
 <body id="resultBody">
@@ -190,7 +150,6 @@
     const inviteText = document.getElementById("inviteText");
     const sugarText = document.getElementById("sugarText");
     const compatibilityText = document.getElementById("compatibilityText");
-    const typeDetails = document.getElementById("typeDetails");
 
     let room = "";
     if (q3 === "whipped") {
@@ -208,72 +167,40 @@
     }
 
     const archetypes = {
-      "blue-control": ["Tender Protector", "You lead with gravity, not volume.", "The strongest love is the love that can demonstrate its fragility. – Paulo Coelho", "You lead with grace, grounding those around you...", "tender_protector", "tender_protector"],
-      "blue-partner control": ["Devoted Darling", "Nothing is as kinky as loyalty.", "Love is composed of a single soul inhabiting two bodies. – Aristotle", "You don’t perform devotion, you embody it...", "devoted_darling", "devoted_darling"],
-      "blue-depends mood": ["Heatwave", "There's no need to change who you are...", "Maybe people think I look sexy because I feel sexy… – Scarlett Johansson", "You don’t just walk into a room, you tilt its emotional climate...", "heatwave", "heatwave"],
-      "blue-depends partner": ["Mood Multiplier", "You match their vibe—and raise it.", "I don’t adapt to people. I evolve with them. – Anonymous", "You don’t lead or follow, you co-create...", "mood_multiplier", "mood_multiplier"],
-      "green-control": ["Charmer in Charge", "You don’t just take control. You make them beg for it.", "Power isn’t taken. It’s given—willingly. – Toni Morrison", "You don’t dominate with force, you dominate with allure...", "charmer_in_charge", "charmer_in_charge"],
-      "green-partner control": ["Promiscuous Plaything", "Are you ready for a wild ride!", "Sex is part of nature. I go along with nature. – Marilyn Monroe", "You’re here for the spark...", "promiscuous_plaything", "promiscuous_plaything"],
-      "green-depends mood": ["Bedroom Adventurer", "I'm up for anything and down to get down and dirty.", "It is not by obeying the rules that we come to know pleasure, but by breaking them. – Anaïs Nin", "You crave novelty...", "bedroom_adventurer", "bedroom_adventurer"],
-      "green-depends partner": ["Generous Giver", "You have so much to give, you just need someone to give it to.", "Pleasure is the measure of connection. – Esther Perel", "You feel most alive when you’re tuning into someone else...", "generous_giver", "generous_giver"],
-      "red-control": ["Dungeon Master", "You’re not just having a fantasy. You’re the one in charge of it.", "Power is the ultimate aphrodisiac. – Henry Kissinger", "You don’t play a dominant. You are one...", "dungeon_master", "dungeon_master"],
-      "red-partner control": ["Claimed & Trained", "The deeper you give in the more pleasure you'll feel.", "The harder the mindfucking the better. – Anonymous", "You don’t want to just submit, you want to surrender completely...", "claimed__trained", "claimed_and_trained"],
-"red-depends mood": [
-  "The Provoker",
-  "You press buttons—on purpose.",
-  "Power is not given to you. You have to take it. – Beyoncé Knowles",
-  "You poke, provoke, and press all the right buttons...",
-  "the_provoker",      // imageSafeName
-  "provoker"           // ✅ correct linkSafeName
-],
-"red-depends partner": [
-  "The Punish Me",
-  "What you call defiance, I call foreplay.",
-  "Punish me right, and I’ll beg for more. – Anonymous",
-  "You test limits, not to break them, but to find out who’s strong enough...",
-  "the_punish_me",     // imageSafeName
-  "punish_me"          // ✅ correct linkSafeName
-]
+      "blue-depends mood": ["Heatwave", "There's no need to change who you are...", "", "", "heatwave", "heatwave"],
+      // (Insert other archetypes here)
     };
 
     const key = `${room}-${q9}`;
-    const [typeName, slogan, quote, description, imageSafeName, linkSafeName] =
+    const [typeName, slogan, , , imageSafeName, linkSafeName] =
       archetypes[key] || ["Unknown", "", "", "", "unknown", "unknown"];
 
     const genderSuffix = q8 === "eggplant" ? "male" : "female";
     const imagePath = `images/${imageSafeName}_${genderSuffix}.jpg`;
-const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
+    const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
+
     archetypeText.innerHTML = `
-  <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
-    Your Sexual Profile:
-  </div>
-<div class="archetype-name">
-  <a href="${profilePath}" class="no-underline">${typeName}</a>
-</div>
-  <div class="slogan">${slogan}</div>
-  <a href="${profilePath}">
-    <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false">
-  </a>
- <div class="profile-caption">
-  <a href="/premium/erotic-blueprint_${linkSafeName}.html" class="no-underline" style="color: gold; font-weight: bold; text-decoration: underline;">
-    Click here to reveal your full sexual profile
-  </a>
-</div>
-`;
+      <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
+        Your Sexual Profile:
+      </div>
+      <div class="archetype-name">
+        <a href="${profilePath}" class="no-underline">${typeName}</a>
+      </div>
+      <div class="slogan">${slogan}</div>
+      <div class="image-container">
+        <a href="${profilePath}">
+          <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false">
+        </a>
+      </div>
+      <div class="profile-caption">
+        <a href="${profilePath}" class="no-underline" style="color: gold; font-weight: bold; text-decoration: underline;">
+          Click here to reveal your full sexual profile
+        </a>
+      </div>
+    `;
 
     const matches = {
-      "Devoted Darling": ["Tender Protector", "Heatwave", "Promiscuous Plaything"],
-      "Mood Multiplier": ["Heatwave", "Tender Protector", "Bedroom Adventurer"],
-      "Heatwave": ["Mood Multiplier", "Devoted Darling", "Generous Giver"],
-      "Tender Protector": ["Devoted Darling", "Mood Multiplier", "Promiscuous Plaything"],
-      "Promiscuous Plaything": ["Charmer in Charge", "Bedroom Adventurer", "Dungeon Master"],
-      "Generous Giver": ["Bedroom Adventurer", "Charmer in Charge", "The Provoker"],
-      "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "The Punish Me"],
-      "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Claimed & Trained"],
-      "Claimed & Trained": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
-      "The Punish Me": ["The Provoker", "Claimed & Trained", "Bedroom Adventurer"],
-      "The Provoker": ["The Punish Me", "Claimed & Trained", "Generous Giver"],
-      "Dungeon Master": ["Claimed & Trained", "The Punish Me", "Promiscuous Plaything"]
+      "Heatwave": ["Mood Multiplier", "Devoted Darling", "Generous Giver"]
     };
 
     if (matches[typeName]) {
@@ -291,10 +218,7 @@ const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
       with the password: <strong>Sweet Spot</strong>`;
     }
 
-    if (
-      q4 === "yes" || q4 === "little" ||
-      q6 === "flaunt" || q6 === "partner shine"
-    ) {
+    if (q4 === "yes" || q4 === "little" || q6 === "flaunt" || q6 === "partner shine") {
       inviteText.innerHTML = `
         🎬 You’ve been selected to audition for our dating show.<br>
         Go play <strong>The Pickup Line</strong>! Once you’re in, you won’t want to pull out.
