--- a/Result.html
+++ b/Result.html
@@ -87,10 +87,16 @@
       text-decoration: none;
     }
 
-    img.no-save {
+    .archetype-name {
+  font-weight: bold;
+  font-size: 2rem;
+  margin-bottom: 12px;
+}
+
+img.no-save {
   user-select: none;
   display: block;
- margin: 0 auto 30px auto;
+  margin: 0 auto 30px auto;
   max-width: 400px;
   width: 100%;
   height: auto;
@@ -99,12 +105,21 @@
   box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
 }
 
-    .archetype-name {
-  font-weight: bold;
-  font-size: 2rem;
-  margin-bottom: 12px;
+/* Additional mobile-specific fix */
+@media (max-width: 1023px) {
+  img.no-save {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  
+  /* Ensure the parent container is also centered */
+  .section img.no-save {
+    display: block;
+    margin: 0 auto 30px auto;
+  }
 }
-
+    
 @media (min-width: 1024px) {
   .archetype-name {
     font-size: 3.2rem;
