--- a/Result.html
+++ b/Result.html
@@ -269,7 +269,7 @@ const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
   <a href="${profilePath}">
     <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false">
   </a>
- <div class="profile-caption">
+<div class="profile-caption" style="text-shadow: none;">
   <a href="/premium/erotic-blueprint_${linkSafeName}.html" class="no-underline" style="color: gold; font-weight: bold; text-decoration: underline;">
     Click here to reveal your full sexual profile
   </a>
@@ -316,5 +316,23 @@ const profilePath = `/premium/erotic-blueprint_${linkSafeName}.html`;
       `;
     }
   </script>
+  <div style="margin-top: 60px;">
+  <a href="/archetype-gallery.html">
+    <button style="
+      font-size: 1.2rem;
+      padding: 14px 28px;
+      border: 2px solid gold;
+      border-radius: 10px;
+      background-color: transparent;
+      color: gold;
+      font-weight: bold;
+      font-style: italic;
+      cursor: pointer;
+      text-shadow: none;
+    ">
+      See All Sexual Profiles
+    </button>
+  </a>
+</div>
 </body>
 </html>
