--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -100,6 +100,10 @@
       <img src="/images/bedroom_adventurer_male.jpg" alt="Male Bedroom Adventurer">
     </div>
   </div>
+
+  <h2>Description</h2>
+  <p>You crave novelty. You like to stir things up and test the edges. You’re turned on by the idea that anything could happen and you might be the one to make it happen. Research shows that eroticism thrives on psychological novelty. You’re not looking to disrupt, you’re looking to discover.</p>
+  
         <h2>Power Dynamic Arc</h2>
     <p><strong>Relationship Trajectory:</strong><br>
     Bedroom Adventurers thrive on novelty, exploration, and dynamic play. The role they take on in a relationship is highly determined by their mood, but they tend to lean dominant, especially when their curiosity is piqued. Their relationships flourish when spontaneity and experimentation are encouraged. They may detach if the connection becomes too rigid or repetitive.</p>
