--- a/premium/erotic-blueprint_charmer_in_charge.html
+++ b/premium/erotic-blueprint_charmer_in_charge.html
@@ -100,6 +100,11 @@
       <img src="/images/charmer_in_charge_male.jpg" alt="Male Charmer in Charge">
     </div>
   </div>
+
+ <h2>Description</h2>
+  <p>You don’t dominate with force, you dominate with allure. You lead with confidence and draw people in with magnetic energy. You’re the person they don’t want to disobey, not out of fear, but fascination. Dominance researchers call this persuasive power, it’s less about pushing and more about pull.</p>
+  
+  
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
   The Charmer in Charge doesn’t shift into dominance, it’s simply who they are. Their control is erotic, magnetic, and natural. They don’t force it. They attract it. Relationships flourish when partners surrender willingly, drawn to the Charmer’s charisma, not coerced by power.</p>
