--- a/premium/erotic-blueprint_claimed_and_trained.html
+++ b/premium/erotic-blueprint_claimed_and_trained.html
@@ -100,6 +100,10 @@
       <img src="/images/claimed__trained_male.jpg" alt="Male Claimed & Trained">
     </div>
   </div>
+
+ <h2>Description</h2>
+  <p>You don’t want to just submit, you want to surrender completely. You want to be dominated by someone you can't resist. Commands don’t restrict you; they turn you on. Submission, for you, is an erotic identity, not a mere role. Psychologists call this identity-congruent kink, when obedience isn’t just hot, it fits just right.</p>
+  
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
   Claimed & Trained submissives do not enter relationships casually, they attach. Their arc is one of deepening surrender. They crave consistency, ritual, and psychological conditioning. Once bonded, they don’t want to think, they want to obey.</p>
