--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -100,6 +100,10 @@
       <img src="/images/the_punish_me_male.jpg" alt="Male Punish Me">
     </div>
   </div>
+
+ <h2>Description</h2>
+  <p>You test limits, not to break them, but to find out who’s strong enough to handle your full intensity. You thrive on dynamic power play. Research in kink psychology shows that bratting is often a form of intimacy-seeking resistance, you push to see who can truly push back. Your defiance is a dare. You're looking for someone who's strong enough to handle your intensity and put you back in your place.</p>
+  
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
   The Punish Me is a submissive-leaning role switch who initiates conflict as foreplay. They test limits, provoke reactions, and thrive on being overpowered by someone strong enough to correct them. Their dynamic is not passive but deliberately instigating. They only submit when someone proves they can handle them.</p>
