--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -100,6 +100,10 @@
       <img src="/images/dungeon_master_male.jpg" alt="Male Dungeon Master">
     </div>
   </div>
+
+ <h2>Description</h2>
+  <p>You don’t play a dominant. You are one. Control isn’t a tool, it’s your second language. You lead with clarity and expectation. Others surrender to you not because they must, but because they want to. Kink researchers define this as total power exchange, you don’t need try and take control. You already have it.</p>
+  
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
   Dungeon Masters are fixed dominants. They don’t perform power, they are power. They require obedience not as a preference but as a precondition. Their ideal relationships are built on total control paired with willing submission. If that control is questioned, the dynamic collapses.</p>
