--- a/premium/erotic-blueprint_provoker.html
+++ b/premium/erotic-blueprint_provoker.html
@@ -100,6 +100,11 @@
       <img src="/images/the_provoker_male.jpg" alt="Male Provoker">
     </div>
   </div>
+
+ <h2>Description</h2>
+  <p>You poke, provoke, and press all the right buttons. It's effortless for you to flip the switch and flip the room. You don't get swayed by other emotions, you set the mood. In power-exchange theory, you’re a dominant-leaning switch, meaning you aren't reactive, you take the initiative. People don’t play games with you unless they're playing your game.</p>
+  
+  
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
   Provokers are driven by mood and momentum. The moment they sense tension, defiance, or desire, they move fast and take over. They don’t start soft, and they don’t follow scripts. They scan for the rules, then push to see how far they can bend them. Power is a dynamic to be tested, flipped, and rewritten in real time. It doesn’t matter how the scene begins, whether on their back, on their knees, or seemingly giving in. They always find a way to come out on top, in more ways than one. Predictability kills their spark. But give them something to push against and they’ll show you what real power feels like.</p>
