--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -108,7 +108,7 @@
     <p><strong>Relationship Trajectory:</strong><br>
     Bedroom Adventurers thrive on novelty, exploration, and dynamic play. The role they take on in a relationship is highly determined by their mood, but they tend to lean dominant, especially when their curiosity is piqued. Their relationships flourish when spontaneity and experimentation are encouraged. They may detach if the connection becomes too rigid or repetitive.</p>
 
-    <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+    <p><strong>Polarity Shift Graph:</strong></p>
     <ul>
       <li>Mood-based dominance paired with playful partner → 📈 Energetic upward curve</li>
       <li class="sub">Relationship becomes a thrilling co-creation</li>
@@ -182,7 +182,7 @@
     What makes them unforgettable is the sense that nothing is off-limits. They bring confidence, creativity, and a readiness to push erotic boundaries, whether it’s toys, settings, group dynamics, or roleplay. They’re the partner people fantasize about long after it’s over.</p>
 
     <p><strong>Erotic Drop (Dealbreaker):</strong><br>
-    Repetition and repression. If sex becomes a routine or their partner is unwilling to explore, they lose interest. They disconnect quickly if shamed for being too “much,” or if their erotic boldness is met with judgment.</p>
+    Repetition and repression. If sex becomes a routine or their partner is unwilling to explore, they lose interest. They disconnect quickly if shamed for being too “weird,” or if their boldness is met with judgment.</p>
         <h2>Erotic Short Story</h2>
     <p>The afterparty is on the 32nd floor of a boutique hotel downtown. Someone rented out the penthouse for the night, curved glass walls, open bar, green and gold LED strips lining the ceiling. You weren’t planning to stay long, just long enough to flirt, maybe swipe a few cocktails, soak up the view.</p>
 
