--- a/premium/erotic-blueprint_charmer_in_charge.html
+++ b/premium/erotic-blueprint_charmer_in_charge.html
@@ -109,7 +109,7 @@
   <p><strong>Relationship Trajectory:</strong><br>
   The Charmer in Charge doesn’t shift into dominance, it’s simply who they are. Their control is erotic, magnetic, and natural. They don’t force it. They attract it. Relationships flourish when partners surrender willingly, drawn to the Charmer’s charisma, not coerced by power.</p>
 
-  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <p><strong>Polarity Shift Graph:</strong></p>
   <ul>
     <li>Confident, charismatic presence with flirtatious partner → 📈 Magnetic surge</li>
     <li class="sub">Partners respond with eagerness and desire</li>
