--- a/premium/erotic-blueprint_claimed_and_trained.html
+++ b/premium/erotic-blueprint_claimed_and_trained.html
@@ -108,7 +108,7 @@
   <p><strong>Relationship Trajectory:</strong><br>
   Claimed & Trained submissives do not enter relationships casually, they attach. Their arc is one of deepening surrender. They crave consistency, ritual, and psychological conditioning. Once bonded, they don’t want to think, they want to obey.</p>
 
-  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <p><strong>Polarity Shift Graph:</strong></p>
   <ul>
     <li>Submissive stays submissive → 📈 Smooth and steep upward growth</li>
     <li class="sub">They flourish with structure, thrive on repetition, and deepen trust over time</li>
