--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -114,7 +114,7 @@
     <li>Partner withdraws emotionally → 📉 Performance energy fades</li>
     <li class="sub">Without feedback or attention, desire flatlines</li>
     <li>Partner matches their energy and feeds the game → 💥 Submission offered</li>
-    <li class="sub"><sub>They give in fully when they feel desired, not judged</li>
+    <li class="sub">They give in fully when they feel desired, not judged</li>
   </ul>
 
   <h2>Ideal Dynamic:</h2>
