--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -121,7 +121,7 @@
   <p>They thrive with partners who love the spotlight just as much—or who love putting them in it. These Playthings come alive when their pleasure feels like a show, a gift, and a game all at once. The best partners don’t try to tame them. They play with them. And they never make them feel ashamed for craving more.</p>
 
   <h2>Origins of Desire</h2>
-  <p>Promiscuous Playthings often developed their erotic style as a way of reclaiming visibility. Whether they grew up overlooked or hypersexualized, they learned how to turn attention into agency. Being watched makes them feel wanted. Being desired makes them feel safe. And sex, for them, is where they can finally turn the volume all the way up.</p>
+  <p>Promiscuous Playthings often developed their erotic style as a way of reclaiming visibility. Whether they grew up overlooked or hypersexualized, they learned how to turn attention into agency. Being watched makes them feel wanted. Being desired makes them feel safe. For them, sex is where they can finally turn the volume all the way up.</p>
 
   <p><strong>Theoretical Explanations:</strong></p>
   <ul>
