--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -181,7 +181,7 @@
 
   <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong> Promiscuous Playthings are electric. They make their partners feel desired, wanted, and turned on by how openly they crave. Their submission is a performance of pleasure, and it’s intoxicating. Their gift is how much they live in the moment. They don’t hold back and their partners feel it.</p>
-  <p><strong>Erotic Drop (Dealbreaker):</strong> Feeling judged, shamed, or reduced to a stereotype. If their partner stops giving them attention—or mocks the way they ask for it—they’ll feel unsafe and unwanted, and shut down fast. They only bloom when their boldness is met with admiration.</p>
+  <p><strong>Erotic Drop (Dealbreaker):</strong> Feeling judged, shamed, or reduced to a stereotype. If their partner stops giving them attention or mocks the way they ask for it, they’ll feel unsafe and unwanted, and shut down fast. They only bloom when their boldness is met with admiration.</p>
       <!-- Erotic Short Story -->
     <div class="content-section">
       <h2>Erotic Short Story</h2>
