--- a/Index.html
+++ b/Index.html
@@ -125,5 +125,11 @@
       window.location.href = `result.html?${params.toString()}`;
     });
   </script>
+  <footer>
+  <p style="font-size: 0.8rem;">
+    © 2025 Le Libido. All rights reserved. |
+    <a href="/legal.html">Legal Notice</a>
+  </p>
+</footer>
 </body>
 </html>
