--- a/Index.html
+++ b/Index.html
@@ -125,11 +125,13 @@
       window.location.href = `result.html?${params.toString()}`;
     });
   </script>
-  <footer>
-  <p style="font-size: 0.8rem;">
-    © 2025 Le Libido. All rights reserved. |
-    <a href="/legal.html">Legal Notice</a>
-  </p>
-</footer>
+  <footer style="text-align: center; margin-top: 40px;">
+    <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
+      © 2025 Le Libido. All rights reserved. |
+      <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
+    </p>
+  </footer>
+</body>
+</html>
 </body>
 </html>
